@@ -9,6 +9,8 @@
 ==========5.35==========
 2025-
 1. 将所有内置实体控件加入ui.windows，在TinUI销毁后进行销毁
+2. listview.select会同步视图
+3. 优化渲染并修复若干小问题
 
 ==========5.34==========
 2025-7-6
